Fixed issue with disabled button active state on Firefox

--- a/figma-plugin-ds.css
+++ b/figma-plugin-ds.css
@@ -290,16 +290,16 @@
 }
 
 .button--primary {
+  color: #ffffff;
+  background-color: #18a0fb;
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
   letter-spacing: 0.01em;
-  color: #ffffff;
-  background-color: #18a0fb;
 }
 
-.button--primary:active, .button--primary:focus {
+.button--primary:enabled:active, .button--primary:enabled:focus {
   border: 2px solid rgba(0, 0, 0, 0.3);
 }
 
@@ -308,62 +308,62 @@
 }
 
 .button--primary-destructive {
+  color: #ffffff;
+  background-color: #f24822;
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
   letter-spacing: 0.01em;
-  color: #ffffff;
-  background-color: #f24822;
 }
 
-.button--primary-destructive:active, .button--primary-destructive:focus {
+.button--primary-destructive:enabled:active, .button--primary-destructive:enabled:focus {
   border: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .button--primary-destructive:disabled {
-  opacity: 0.4;
+  opacity: .4;
 }
 
 .button--secondary {
+  color: rgba(0, 0, 0, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  background-color: #ffffff;
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
   letter-spacing: 0.005em;
-  color: rgba(0, 0, 0, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  background-color: #ffffff;
 }
 
-.button--secondary:active, .button--secondary:focus {
+.button--secondary:enabled:active, .button--secondary:enabled:focus {
   padding: 4px 15px 4px 15px;
   border: 2px solid #18a0fb;
 }
 
-.button--secondary:disabled {
+.button--secondary:disabled, .button--secondary:disabled {
   color: rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .button--secondary-destructive {
+  color: #f24822;
+  border: 1px solid #f24822;
+  background-color: #ffffff;
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
   letter-spacing: 0.005em;
-  color: #f24822;
-  border: 1px solid #f24822;
-  background-color: #ffffff;
 }
 
-.button--secondary-destructive:active, .button--secondary-destructive:focus {
+.button--secondary-destructive:enabled:active, .button--secondary-destructive:enabled:focus {
   padding: 4px 15px 4px 15px;
   border: 2px solid #f24822;
 }
 
 .button--secondary-destructive:disabled {
-  opacity: 0.4;
+  opacity: .4;
 }
 
 .button--margin-right {
